cmake_minimum_required(VERSION 3.23)
project(Project_3)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(Project_3

        baby-names.txt
        bar.h
        barchart.h
        barchartanimate.h
        barchartAnimationDark.gif
        barchartAnimationLight.gif
        brands.txt
        cities-usa.txt
        cities.txt
        countries.txt
        endgame.txt
        football.txt
        game-of-thrones.txt
        infinity-war.txt
        "makefile (1)"
        movies.txt
        myrandom.h
        patents.txt
        tests.cpp
        trademarks.txt)
